--- a/src/app/operation/operation-accordion/operation-accordion.component.css
+++ b/src/app/operation/operation-accordion/operation-accordion.component.css
@@ -72,7 +72,7 @@ ngb-accordion /deep/ .card {
 }
 
 .zen-accordion-content {
- border: 1px solid rgba(0, 0, 0, 0.125);; 
+ border: 1px solid rgba(0, 0, 0, 0.125);
  padding: 1rem;
  position: absolute;
  z-index: 3;
