--- a/src/app/note/note-modal/note-modal.component.html
+++ b/src/app/note/note-modal/note-modal.component.html
@@ -6,11 +6,11 @@
     </button>
   </div>
   <div class="modal-body">
-    <form class="form-inline" #notesExperienceForm="ngForm">
+    <form class="form-inline" #notesForm="ngForm">
       <div class="form-group mx-sm-3 w-75">
         <label for="note">Note:</label>
         <input type="text" class="form-control w-75 mx-sm-3" name="note" id="note" [(ngModel)]="noteAtr.note" (keydown.enter)="onKeydown($event)">
-        <button type="button" class="btn btn-primary" (click)="add();" [disabled]="!notesExperienceForm.form.valid">Add</button>
+        <button type="button" class="btn btn-primary" (click)="add();" [disabled]="!notesForm.form.valid">Add</button>
       </div>
     </form>
     <div class="row mt-4">
