--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -7,8 +7,10 @@
         <div class="col-5">
           <div class="card">
             <div class="card-body">
-              <p class="card-title">{{ buy.stock_data.code }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} <span
-                 title="{{ getDateLapse(buy.date) }}">({{ buy.date | date: "dd.MM.y" }})</span></p>
+             <p class="card-title">{{ buy.stock_data.code }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} 
+               <span title="{{ getDateLapse(buy.date) }}">({{ buy.date | date: "dd.MM.y" }})</span>
+              </p>
+
               <div class="card-text">
                 <div class="row">
                   <div class="col-6">
@@ -39,17 +41,18 @@
               <div class="col-6">
                 <div class="form-group">
                   <label for="amount">Amount: </label>
-                  <input type="text" class="form-control" id="amount" [(ngModel)]="buy.amount" name="amount">
+                  <input type="text" readonly="true" class="form-control" id="amount" [(ngModel)]="buy.amount" name="amount">
                 </div>
 
                 <div class="form-group">
                   <label for="price">Price: </label>
-                  <input type="text" class="form-control" id="price" [(ngModel)]="buy.price" name="price">
+                  <input type="text" readonly="true" class="form-control" id="price" [(ngModel)]="buy.price" name="price">
                 </div>
 
                 <div class="form-group">
                   <button type="button" class="btn btn-primary mr-1" (click)="edit(buy);" [disabled]="!buyForm.form.valid">Edit
                   </button>
+                  <zen-note-modal [operation]="buy"></zen-note-modal>
                 </div>  
               </div>
               <div class="col-6">
