--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -14,7 +14,7 @@
                   experience.nickname }} ({{ experience.date | date: "dd.MM.y" }})
                 </div>
                 <div class="col-1">
-                  <zen-note-modal [experiment]="experience"></zen-note-modal>
+                  <zen-note-modal [operation]="experience"></zen-note-modal>
                 </div>
                 <div class="col-3">
                   <select [(ngModel)]="experience.intent" class="form-control">
