--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -41,7 +41,7 @@
                       <li>Action: {{ experience.action }}</li>
                       <li>Target Gain: R$ {{ experience.target_gain | number:'1.2-2' }} / {{
                         experience.target_gain_percent | number: '1.2-2'}}%</li>
-                      <li>Operation Limit: R$ {{ experience.operation_limit | number:'1.2-2' }} </li>
+                      <li>Recommended Limit: R$ {{ experience.operation_limit | number:'1.2-2' }} </li>
                     </ul>
                   </div>
                   <div class="col-7">
@@ -76,7 +76,7 @@
 
                 <div class="form-group">
                   <label for="price">Price: </label>
-                  <input type="text" class="form-control form-control-sm" id="price" [(ngModel)]="experience.price"
+                  <input type="text" class="form-control form-control-sm" [ngStyle]="{'background': getPiranhaIndicator(experience)}" id="price" [(ngModel)]="experience.price"
                                                                           name="price">
                 </div>
 
@@ -105,7 +105,7 @@
                 </div>
                 <div class="form-group">
                   <label for="stop_loss">Stop Loss: </label>
-                  <input type="text" class="form-control form-control-sm" id="stop_loss" [(ngModel)]="experience.stop_loss"
+                  <input type="text" class="form-control form-control-sm" [ngStyle]="{'background': getPiranhaIndicator(experience)}" id="stop_loss" [(ngModel)]="experience.stop_loss"
                                                                           name="stop_loss">
                 </div>
 
