--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -1,6 +1,7 @@
 <zen-menu></zen-menu>
 <zen-operation-accordion (onOperationMade)="updateBuys()"></zen-operation-accordion>
 <div class="container-fluid">
+<zen-bootstrap-officer></zen-bootstrap-officer>
   <div class="row">
     <div class="col-12">
       <div class="row mt-3" *ngFor="let buy of buys">
