--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-2 mt-3" *ngFor="let buy of buys">
-    <div class="card">
+    <div class="card" [ngStyle]="{'background': getBackgroundColor(buy)}">
       <div class="card-body">
         <h4 class="card-title">{{ buy.stock_data.code }}</h4>
         <h6 title="{{ getDateLapse(buy.date) }}" class="card-subtitle mb-2 text-muted">{{ buy.nickname || "A nickless buy "}}  {{ buy.date | date: "dd.MM.y" }}</h6>
