--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -2,6 +2,7 @@
 
 <zen-operation-accordion (onOperationMade)="updateExperiment($event)"></zen-operation-accordion>
 <div class="container-fluid">
+<zen-bootstrap-officer></zen-bootstrap-officer>
   <div class="row">
     <div class="col-12" *ngFor="let experience of experiences">
       <div class="row mt-3">
@@ -11,7 +12,9 @@
               <div class="row card-title">
                 <div class="col-7">
                   {{ experience.stock_data.code }} ({{ experience.stock_data.owned }}) - {{
-                  experience.nickname }} ({{ experience.date | date: "dd.MM.y" }})
+                  experience.nickname }} 
+                  
+                  <span title="{{ getDateLapse(experience.date) }}">({{ experience.date | date: "dd.MM.y" }})</span>
                 </div>
                 <div class="col-1">
                   <zen-note-modal [operation]="experience"></zen-note-modal>
