--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -37,11 +37,7 @@
                 <div class="row">
                   <div class="col-5">
                     <ul>
-                      <li><span title="R$ {{ experience.stop_loss_result | number: '1.2-2' }}/ {{ experience.stop_loss_percent | number: '1.2-2' }}%">Stop Loss: R$ {{ experience.stop_loss | number:'1.2-2' }}</span></li>
-                      <li>Stop Gain: R$ {{ experience.stop_gain | number:'1.2-2' }} </li>
-                      <li>Limit: R$ {{ experience.limit | number:'1.2-2' }} </li>
-                      <li>Target: R$ {{ experience.target | number:'1.2-2' }} </li>
-                      <li>Action: {{ experience.action }}</li>
+                      <li>Stop Loss Result: R$ {{ experience.stop_loss_result | number: '1.2-2' }}/ {{ experience.stop_loss_percent | number: '1.2-2' }}%</li>
                       <li>Target Gain: R$ {{ experience.target_gain | number:'1.2-2' }} / {{
                         experience.target_gain_percent | number: '1.2-2'}}%</li>
                       <li>Recommended Limit: R$ {{ experience.operation_limit | number:'1.2-2' }} </li>
