--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -6,7 +6,7 @@
     <div class="col-12">
       <div class="row mt-3" *ngFor="let buy of buys">
         <div class="col-5">
-          <div class="card">
+          <div class="card" [ngStyle]="{'background': getBackgroundColor(buy)}">
             <div class="card-body">
              <p class="card-title">{{ buy.stock_data.code }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} 
                <span title="{{ getDateLapse(buy.date) }}">({{ buy.date | date: "dd.MM.y" }})</span>
