--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -92,6 +92,8 @@
 
                 <button type="button" class="btn btn-primary mr-1" (click)="edit(experience);" [disabled]="!focusExperienceForm.form.valid">Edit
                 </button>
+               
+                <zen-quick-buy [experience]="experience" (onOperationBought)="updateExperiment($event)" ></zen-quick-buy>
 
                 <button type="button" class="btn btn-primary" (click)="delete(experience);">Delete
                 </button>
