--- a/src/app/operation/quick-buy/quick-buy.component.html
+++ b/src/app/operation/quick-buy/quick-buy.component.html
@@ -1,2 +1,2 @@
-<button type="button" class="btn btn-primary mr-1" (click)="quickBuy(experience);">Quick Buy
+<button type="button" class="btn btn-primary" (click)="quickBuy();">Quick Buy
 </button>
