--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -54,6 +54,7 @@
                 <div class="form-group">
                   <button type="button" class="btn btn-primary mr-1" (click)="edit(buy);" [disabled]="!buyForm.form.valid">Edit
                   </button>
+                  <zen-quick-sell class="mr-1" [operation]="buy" (onOperationSold)="list()"></zen-quick-sell>
                   <zen-note-modal [operation]="buy"></zen-note-modal>
                 </div>  
               </div>
