--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -4,7 +4,7 @@
 <zen-bootstrap-officer></zen-bootstrap-officer>
   <section class="row">
     <div class="col-12">
-      <h3>Boughts</h3>
+      <h3 style="color: rgba(0,0,0,0.6); text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);">Boughts</h3>
       <hr>
       <zen-buy-list [buys]="buys" (onOperationUpdated)="updateAll()"></zen-buy-list>
       <hr>
