Changings in accordion

--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-lg-4 col-xl-2" *ngFor="let buy of buys; let i = index">
     <div class="card mb-1" [ngStyle]="{'background': getBackgroundColor(buy)}">
       <div class="card-body">
-        <h4 class="card-title"><span style="color: transparent; text-shadow: 0 0 5px rgba(0,0,0,0.5);">{{ buy.stock_data.code }}</span></h4>
+        <h4 class="card-title"><span>{{ buy.stock_data.code }}</span></h4>
         <h6 title="{{ getDateLapse(buy.creation_date) }}" class="card-subtitle mb-2 text-muted">{{ buy.nickname || "A nickless buy "}}  {{ buy.creation_date | date: "dd.MM.y" }}</h6>
         <div class="card-text">
           <p>Buy Price: R$ {{ buy.price }}</p>
