--- a/src/app/operation/operation-accordion/operation-accordion.component.html
+++ b/src/app/operation/operation-accordion/operation-accordion.component.html
@@ -1,8 +1,8 @@
-<div class="zen-accordion">
-  <div class="zen-container">
-    <button class="btn btn-sm btn-outline-primary mr-2 zen-rotate zen-experiment" (click)="acc.toggle('experience')">Experience</button>
-    <button class="btn btn-sm btn-outline-primary mr-2 zen-rotate zen-buy" (click)="acc.toggle('buy')">Buy</button>
-    <button class="btn btn-sm btn-outline-primary mr-2 zen-rotate zen-sell" (click)="acc.toggle('sell')">Sell</button>
+<div class="">
+  <div class="">
+    <button class="btn btn-sm btn-outline-primary mr-2" (click)="acc.toggle('experience')">Experience</button>
+    <button class="btn btn-sm btn-outline-primary mr-2" (click)="acc.toggle('buy')">Buy</button>
+    <button class="btn btn-sm btn-outline-primary mr-2" (click)="acc.toggle('sell')">Sell</button>
   </div>
 
   <div class="row">
