More infos for the stocks

--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -11,8 +11,7 @@
             <div class="card-body">
               <div class="row card-title">
                 <div class="col-7">
-                  {{ experience.stock_data.code }} ({{ experience.stock_data.owned }}) - {{
-                  experience.nickname }} 
+                  {{ experience.stock_data.code }}-{{ experience.stock_data.name }} ({{ experience.stock_data.owned }}) - {{ experience.nickname }} 
                   
                   <span title="{{ getDateLapse(experience.creation_date) }}">({{ experience.creation_date | date: "dd.MM.y" }})</span>
                 </div>
