--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -8,7 +8,7 @@
         <div class="col-5">
           <div class="card" [ngStyle]="{'background': getBackgroundColor(buy)}">
             <div class="card-body">
-             <p class="card-title">{{ buy.stock_data.code }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} 
+              <p class="card-title">{{ buy.stock_data.code }}-{{ buy.stock_data.name }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} 
                <span title="{{ getDateLapse(buy.creation_date) }}">({{ buy.creation_date | date: "dd.MM.y" }})</span>
               </p>
 
