--- a/src/app/stock/resume/resume.component.html
+++ b/src/app/stock/resume/resume.component.html
@@ -7,7 +7,7 @@
         <div class="card-text">
           <p>Avg. Price: R$ {{ resume.average_price }}</p>
           <p>Stk. Price: R$ {{ resume.price }}</p>
-          <p>Owned: R$ {{ resume.owned }}</p>
+          <p>Owned: {{ resume.owned }}</p>
           <hr>
           Result: R$ {{ resume.stock_result }}
         </div>
