--- a/src/app/operation/sell-focus/sell-focus.component.html
+++ b/src/app/operation/sell-focus/sell-focus.component.html
@@ -15,7 +15,13 @@
             <div class="row">
               <div class="col-6">
                 <ul>
-                  <li>Sell Value: R$ {{ sell.sell_value | number: '1.2-2' }}</li>
+                  <li title="How much money will enter in the account">Sell Value: R$ {{ sell.sell_value | number: '1.2-2' }}</li>
+                  <li title="How much was gained. The buy price is the average price.">Result: R$ {{ sell.result |
+                    number: '1.2-2' }} / {{ sell.gain_percent | number: '1.2-2' }}%</li>
+                  <li title="How much we will lose(or maybe gain?) if the stop is hit.">Stop loss: R$ {{ sell.stop_loss_result |
+                    number: '1.2-2' }} / {{ sell.stop_loss_percent | number: '1.2-2' }}%</li>
+                  <li title="How much we will gain if the stop is hit.">Stop gain:<span *ngIf="sell.stop_gain_result"> R$ {{ sell.stop_gain_result |
+                      number: '1.2-2' }} / {{ sell.stop_gain_percent | number: '1.2-2' }}%</span></li>
                 </ul>
               </div>
             </div>
@@ -44,15 +50,25 @@
               </div>
 
               <div class="form-group">
-                <button class="btn btn-primary mr-1" type="button" (click)="edit(sell);"
+                <button class="btn btn-primary mr-1" type="button" (click)="edit(sell);" *ngIf="!sell.executed"
                   [disabled]="!sellForm.form.valid">Edit</button>
 
-                <button class="btn btn-primary mr-1" type="button" (click)="execute(sell);"
+                <button class="btn btn-primary mr-1" type="button" (click)="execute(sell);" *ngIf="!sell.executed"
                   [disabled]="!sellForm.form.valid">Execute</button>
               </div>
 
             </div>
             <div class="col-6">
+              <div class="form-group">
+                <label for="stop_loss">Stop loss: </label>
+                <input type="text" class="form-control" id="stop_loss" [(ngModel)]="sell.stop_loss" name="stop_loss">
+              </div>
+
+              <div class="form-group">
+                <label for="stop_gain">Stop gain: </label>
+                <input type="text" class="form-control" id="stop_gain" [(ngModel)]="sell.stop_gain" name="stop_gain">
+              </div>
+
               <div class="form-group">
                 <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="sell.archived"
                                                                         [checked]="sell.archived">
