--- a/src/app/operation/sell-focus/sell-focus.component.html
+++ b/src/app/operation/sell-focus/sell-focus.component.html
@@ -66,6 +66,8 @@
 
                 <button class="btn btn-primary mr-1" type="button" (click)="execute(sell);" *ngIf="!sell.executed"
                   [disabled]="!sellForm.form.valid">Execute</button>
+
+                <zen-archive [operation]="sell" (onOperationArchived)="list()"></zen-archive>
               </div>
 
             </div>
