--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -3,7 +3,7 @@
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="/stock">Stock</a> |
     <a class="p-2 text-dark" href="/experience">Focus on Experiences</a> |
-    <a class="p-2 text-dark" href="/buy-focus">Focus on Buys</a>
+    <a class="p-2 text-dark" href="/buy-focus">Focus on Buys</a> |
     <a class="p-2 text-dark" href="/sell-focus">Focus on Sells</a>
   </nav>
   <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
