--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -4,7 +4,8 @@
     <a class="p-2 text-dark" href="/stock">Stock</a> |
     <a class="p-2 text-dark" href="/experience">Focus on Experiences</a> |
     <a class="p-2 text-dark" href="/buy-focus">Focus on Buys</a> |
-    <a class="p-2 text-dark" href="/sell-focus">Focus on Sells</a>
+    <a class="p-2 text-dark" href="/sell-focus">Focus on Sells</a> |
+    <a class="p-2 text-dark" href="/operations-center">Operations Center</a>
   </nav>
   <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
 </div>
