--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,13 @@
 @import url("../node_modules/bootstrap/dist/css/bootstrap.css");
 @import url("../node_modules/font-awesome/css/font-awesome.min.css");
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 p{
     margin-top: 0;
     margin-bottom: 0;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
